Including BlazorStrap with a package reference and includes

--- a/UserManagementSystem/Client/_Imports.razor
+++ b/UserManagementSystem/Client/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using UserManagementSystem.Client
 @using UserManagementSystem.Client.Shared
+
+@using BlazorStrap
+@using BlazorStrap.Extensions
