--- a/UserManagementSystem/Client/Shared/MainLayout.razor
+++ b/UserManagementSystem/Client/Shared/MainLayout.razor
@@ -7,6 +7,7 @@
 
     <main>
         <div class="top-row px-4">
+            <button class="btn btn-primary btn-sm">Click me</button>
             <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
         </div>
 
