Basic page setup with Navbar and Container

--- a/UserManagementSystem/Client/Shared/MainLayout.razor
+++ b/UserManagementSystem/Client/Shared/MainLayout.razor
@@ -5,12 +5,7 @@
         <NavMenu />
     </div>
 
-    <main>
-        <div class="top-row px-4">
-            <button class="btn btn-primary btn-sm">Click me</button>
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>
-
+    <main class="container-fluid">
         <article class="content px-4">
             @Body
         </article>
