--- a/UserManagementSystem/Client/Shared/NavMenu.razor
+++ b/UserManagementSystem/Client/Shared/NavMenu.razor
@@ -1,3 +1,18 @@
-﻿<nav class="navbar navbar-light bg-light">
-  <a class="mx-2 navbar-brand" href="#">Navbar</a>
+﻿<nav class="navbar navbar-expand-lg navbar-dark bg-dark text-light">
+  <div class="container-fluid">
+    <a class="navbar-brand text-light" href="#"><i class='bx bx-shield'></i></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item mx-3">
+          <a class="nav-link text-light" aria-current="page" href="/users"><i class='bx bx-user'></i>Users</a>
+        </li>
+        <li class="nav-item mx-3">
+          <a class="nav-link text-light" aria-current="page" href="/settings"><i class='bx bx-cog'></i>Settings</a>
+        </li>
+      </ul>
+    </div>
+  </div>
 </nav>
