--- a/UserManagementSystem/Client/Pages/Users.razor
+++ b/UserManagementSystem/Client/Pages/Users.razor
@@ -2,4 +2,40 @@
 
 <PageTitle>Users</PageTitle>
 
-<p>This is the users page!</p>
+<h2>User Management</h2>
+<button class="btn btn-success mt-2 mb-2 add-user">Add User</button>
+<hr>
+
+<div class="table-responsive mt-4">
+  <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">First Name</th>
+                <th scope="col">Last Name</th>
+                <th scope="col">Age</th>
+                <th scope="col">Address</th>
+                <th scope="col">Email Address</th>
+                <th scope="col">Phone Number</th>
+                <th scope="col">Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th scope="row">1</th>
+                <td>Ryan</td>
+                <td>White</td>
+                <td>21</td>
+                <td>1 Bridge Road</td>
+                <td>rypwhite@protonmail.com</td>
+                <td>07777123456</td>
+                <td>
+                    <div class="d-flex w-100 justify-content-center">
+                        <button class="btn btn-warning mx-1 edit-user" id="">Edit User</button>
+                        <button class="btn btn-danger mx-1 delete-user" id="">Delete User</button>
+                    </div>
+                </td>
+            </tr>
+        </tbody>
+  </table>
+</div>
