--- a/UserManagementSystem/Client/Shared/MainLayout.razor
+++ b/UserManagementSystem/Client/Shared/MainLayout.razor
@@ -1,13 +1,9 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
+    <NavMenu />
 
-    <main class="container-fluid">
-        <article class="content px-4">
-            @Body
-        </article>
+    <main class="container-xl container-lg-fluid mt-4">
+        @Body
     </main>
 </div>
