--- a/UserManagementSystem/Client/Pages/Settings.razor
+++ b/UserManagementSystem/Client/Pages/Settings.razor
@@ -2,4 +2,16 @@
 
 <PageTitle>Settings</PageTitle>
 
-<p>This is the settings page!</p>
+<h2>Settings</h2>
+<hr>
+<div class="row">
+    <div class="col-12 col-md-6 col-lg-4">
+        hello
+    </div>
+        <div class="col-12 col-md-6 col-lg-4">
+        hello
+    </div>
+        <div class="col-12 col-md-6 col-lg-4">
+        hello
+    </div>
+</div>
