--- a/UserManagementSystem/Client/Pages/Users.razor
+++ b/UserManagementSystem/Client/Pages/Users.razor
@@ -2,7 +2,8 @@
 @using System.Text.Json;
 @using System.Net.Http;
 @using Microsoft.Extensions.Http;
-
+@using Newtonsoft.Json;
+@using Newtonsoft.Json.Linq;
 @inject HttpClient Http;
 @inject IHttpClientFactory ClientFactory;
 
@@ -27,36 +28,65 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <th scope="row">1</th>
-                <td>Ryan</td>
-                <td>White</td>
-                <td>21</td>
-                <td>1 Bridge Road</td>
-                <td>rypwhite@protonmail.com</td>
-                <td>07777123456</td>
-                <td>
-                    <div class="d-flex w-100 justify-content-center">
-                        <button class="btn btn-warning mx-1 edit-user" id="">Edit User</button>
-                        <button class="btn btn-danger mx-1 delete-user" id="">Delete User</button>
-                    </div>
-                </td>
-            </tr>
+           @foreach (var user in user_list)
+            {
+                <tr>
+                    <td>@user.UID</td>
+                    <td>@user.FirstName</td>
+                    <td>@user.LastName</td>
+                    <td>@user.Age</td>
+                    <td>@user.Address</td>
+                    <td>@user.Email</td>
+                    <td>@user.Phone</td>
+                    <td>
+                        <div class="d-flex w-100 justify-content-center">
+                            <button class="btn btn-warning mx-1 edit-user" id="@user.UID">Edit User</button>
+                            <button class="btn btn-danger mx-1 delete-user" id="@user.UID">Delete User</button>
+                        </div>
+                    </td>
+                </tr>
+            }
         </tbody>
   </table>
 </div>
 
 @code {
+    List<User> user_list = new List<User>();
     protected override async Task OnInitializedAsync()
     {
         // Inside your server-side Razor Page or API controller action
         using (var httpClient = new HttpClient())
         {
-            var apiUrl = "http://localhost/api/get_users.php";
-            //var apiUrl = "http://localhost/api/get_users.php";
-            var response = await httpClient.GetAsync(apiUrl);
-            var responseBody = await response.Content.ReadAsStringAsync();
-            Console.WriteLine(responseBody);
+            var users_url = "http://localhost/api/get_users.php";
+            var response = await httpClient.GetAsync(users_url);
+
+            var response_body = await response.Content.ReadAsStringAsync();
+            dynamic response_object = JsonConvert.DeserializeObject<dynamic>(response_body);
+
+            int status_code = (int)response.StatusCode;
+            
+            if (status_code != 200) {
+                Console.WriteLine(response_object["status"] + " : " + response_object["message"]);
+                return;
+            }
+
+            Console.WriteLine(response_object);
+
+
+            foreach (var user in response_object["data"]) {
+
+                User new_user = new User(        
+                    (int)user["UID"],
+                    (string)user["FirstName"],
+                    (string)user["LastName"],
+                    (int)user["Age"],
+                    (string)user["Address"],
+                    (string)user["Email"],
+                    (string)user["Phone"]
+                );
+            
+                user_list.Add(new_user);
+            }
         }
     }
 }
