--- a/UserManagementSystem/Client/Pages/Users.razor
+++ b/UserManagementSystem/Client/Pages/Users.razor
@@ -41,7 +41,7 @@
                     <td>
                         <div class="d-flex w-100 justify-content-center">
                             <button class="btn btn-warning mx-1 edit-user" id="@user.UID">Edit User</button>
-                            <button class="btn btn-danger mx-1 delete-user" id="@user.UID">Delete User</button>
+                            <button class="btn btn-danger mx-1 delete-user" id="@user.UID" @onclick="() => delete_user(user.UID)">Delete User</button>
                         </div>
                     </td>
                 </tr>
@@ -88,5 +88,11 @@
                 user_list.Add(new_user);
             }
         }
+    }
+
+    private void delete_user(int UID)
+    {
+        Console.WriteLine("You are now deleting user " + UID.ToString());
+        return;
     }
 }
