--- a/UserManagementSystem/Client/Pages/Settings.razor
+++ b/UserManagementSystem/Client/Pages/Settings.razor
@@ -1,4 +1,8 @@
 @page "/settings"
+@using System.Net.Http;
+@using Newtonsoft.Json;
+
+@inject IHttpClientFactory ClientFactory;
 
 <PageTitle>Settings</PageTitle>
 
@@ -6,12 +10,110 @@
 <hr>
 <div class="row">
     <div class="col-12 col-md-6 col-lg-4">
-        hello
+        <h2>Add User</h2>
+        <form>
+            <div class="form-group">
+                <label for="exampleInputEmail1">First Name</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Password</label>
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+            </div>
+            <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                <label class="form-check-label" for="exampleCheck1">Check me out</label>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
     </div>
-        <div class="col-12 col-md-6 col-lg-4">
-        hello
-    </div>
-        <div class="col-12 col-md-6 col-lg-4">
-        hello
+    <div class="col-12 col-md-6 col-lg-4">
+        <h2>Edit User</h2>
+        <form>
+            <div class="form-group">
+                <label for="">Select a user</label>
+                <select class="form-select" name="UID" @onchange="update_form_details">
+                    @foreach (var user in user_list)
+                    {
+                    <option value="@user.UID">@user.FirstName @user.LastName</option>
+                    }
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="">First Name</label>
+                <input type="text" class="form-control" name="FirstName" value="@FirstName">
+            </div>
+            <div class="form-group">
+                <label for="">Last Name</label>
+                <input type="text" class="form-control" name="LastName" value="@LastName">
+            </div>
+            <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                <label class="form-check-label" for="exampleCheck1">Check me out</label>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
     </div>
 </div>
+
+@code {
+    List<User> user_list = new List<User>();
+    protected override async Task OnInitializedAsync()
+    {
+        // Inside your server-side Razor Page or API controller action
+        using (var httpClient = new HttpClient())
+        {
+            var users_url = "http://localhost/api/get_users.php";
+            var response = await httpClient.GetAsync(users_url);
+
+            var response_body = await response.Content.ReadAsStringAsync();
+            dynamic response_object = JsonConvert.DeserializeObject<dynamic>(response_body);
+
+            int status_code = (int)response.StatusCode;
+            
+            if (status_code != 200) {
+                Console.WriteLine(response_object["status"] + " : " + response_object["message"]);
+                return;
+            }
+
+            Console.WriteLine(response_object);
+
+
+            foreach (var user in response_object["data"]) {
+
+                User new_user = new User(        
+                    (int)user["UID"],
+                    (string)user["FirstName"],
+                    (string)user["LastName"],
+                    (int)user["Age"],
+                    (string)user["Address"],
+                    (string)user["Email"],
+                    (string)user["Phone"]
+                );
+            
+                user_list.Add(new_user);
+            }
+        }
+    }
+
+    private int SelectedUser;
+    private string FirstName;
+    private string LastName;
+    private int Age;
+    private string Address;
+    private string Phone;
+    private string Email;
+
+    private void update_form_details(ChangeEventArgs e)
+    {
+        int.TryParse(e.Value.ToString(), out SelectedUser);
+        var selectedUser = user_list.FirstOrDefault(user => user.UID == SelectedUser);
+        FirstName = selectedUser?.FirstName;
+        LastName = selectedUser?.LastName;
+        Age = (int)selectedUser.Age;
+        Address = selectedUser?.Address;
+        Phone = selectedUser?.Phone;
+        Email = selectedUser?.Email;
+    }
+}
