--- a/UserManagementSystem/Client/Pages/Users.razor
+++ b/UserManagementSystem/Client/Pages/Users.razor
@@ -1,17 +1,13 @@
 @page "/users"
-@using System.Text.Json;
 @using System.Net.Http;
-@using System.Text;
-@using Microsoft.Extensions.Http;
 @using Newtonsoft.Json;
-@using Newtonsoft.Json.Linq;
+
 @inject HttpClient Http;
 @inject IHttpClientFactory ClientFactory;
 
 <PageTitle>Users</PageTitle>
 
 <h2>User Management</h2>
-<button class="btn btn-success mt-2 mb-2 add-user">Add User</button>
 <hr>
 
 <div class="table-responsive mt-4">
@@ -41,7 +37,6 @@
                     <td>@user.Phone</td>
                     <td>
                         <div class="d-flex w-100 justify-content-center">
-                            <button class="btn btn-warning mx-1 edit-user" id="@user.UID">Edit User</button>
                             <button class="btn btn-danger mx-1 delete-user" id="@user.UID" @onclick="() => delete_user(user.UID)">Delete User</button>
                         </div>
                     </td>
@@ -117,5 +112,10 @@
                 user_list.Remove(deleted_user);
             }
         }
+    }
+
+    private async Task add_user()
+    {
+        //post a form
     }
 }
