--- a/UserManagementSystem/Client/Pages/Settings.razor
+++ b/UserManagementSystem/Client/Pages/Settings.razor
@@ -40,17 +40,29 @@
                     }
                 </select>
             </div>
-            <div class="form-group">
+            <div class="form-group mt-2">
                 <label for="">First Name</label>
-                <input type="text" class="form-control" name="FirstName" value="@FirstName">
+                <input type="text" class="form-control" name="FirstName" value="@FirstName" required>
             </div>
-            <div class="form-group">
+            <div class="form-group mt-2">
                 <label for="">Last Name</label>
-                <input type="text" class="form-control" name="LastName" value="@LastName">
+                <input type="text" class="form-control" name="LastName" value="@LastName" required>
             </div>
-            <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Check me out</label>
+            <div class="form-group mt-2">
+                <label for="">Age</label>
+                <input type="number" class="form-control" name="Age" value="@Age" required>
+            </div>
+            <div class="form-group mt-2">
+                <label for="">Address</label>
+                <input type="text" class="form-control" name="Address" value="@Address" required>
+            </div>
+            <div class="form-group mt-2">
+                <label for="">Email</label>
+                <input type="email" class="form-control" name="Email" value="@Email" required>
+            </div>
+            <div class="form-group mt-2">
+                <label for="">Phone</label>
+                <input type="number" class="form-control" name="Phone" value="@Phone" required>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
@@ -78,7 +90,6 @@
             }
 
             Console.WriteLine(response_object);
-
 
             foreach (var user in response_object["data"]) {
 
