--- a/UserManagementSystem/Client/Pages/Settings.razor
+++ b/UserManagementSystem/Client/Pages/Settings.razor
@@ -9,26 +9,37 @@
 <h2>Settings</h2>
 <hr>
 <div class="row">
-    <div class="col-12 col-md-6 col-lg-4">
+    <div class="col-12 col-md-6 col-lg-4 mt-3">
         <h2>Add User</h2>
         <form>
-            <div class="form-group">
-                <label for="exampleInputEmail1">First Name</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            <div class="form-group mt-2">
+                <label for="">First Name</label>
+                <input type="text" class="form-control" name="FirstName" placeholder="FirstName" required>
             </div>
-            <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+            <div class="form-group mt-2">
+                <label for="">Last Name</label>
+                <input type="text" class="form-control" name="LastName" placeholder="LastName" required>
             </div>
-            <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Check me out</label>
+            <div class="form-group mt-2">
+                <label for="">Age</label>
+                <input type="number" class="form-control" name="Age" placeholder="Age" required>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <div class="form-group mt-2">
+                <label for="">Address</label>
+                <input type="text" class="form-control" name="Address" placeholder="Address" required>
+            </div>
+            <div class="form-group mt-2">
+                <label for="">Email</label>
+                <input type="email" class="form-control" name="Email" placeholder="Email" required>
+            </div>
+            <div class="form-group mt-2">
+                <label for="">Phone</label>
+                <input type="number" class="form-control" name="Phone" placeholder="Phone" required>
+            </div>
+            <button type="submit" class="btn btn-primary w-100 mt-3">Add User</button>
         </form>
     </div>
-    <div class="col-12 col-md-6 col-lg-4">
+    <div class="col-12 col-md-6 col-lg-4 mt-3">
         <h2>Edit User</h2>
         <form>
             <div class="form-group">
@@ -64,7 +75,7 @@
                 <label for="">Phone</label>
                 <input type="number" class="form-control" name="Phone" value="@Phone" required>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-success w-100 mt-3">Change User</button>
         </form>
     </div>
 </div>
